--- a/test.html
+++ b/test.html
@@ -6,5 +6,5 @@ xzv' mzxjvjlmzxnv
 cd ..
 ]fhscfjs
 
-i am disco dance, zindagi he mera gaana and bajana
+i am disco dance, clal he mera gaana and bajana
 git status 
