--- a/test.html
+++ b/test.html
@@ -5,10 +5,9 @@ xv sjlxzv ljkzxv
 xzv' mzxjvjlmzxnv
 cd ..
 ]fhscfjs
-
-<<<<<<< HEAD
 i am disco dance, clal he mera gaana and bajana
-=======
+
 i am disco dance, gandagi he mera gaana and bajana
->>>>>>> main
-git status 
+fjskcznvj
+
+
